added basic grid template, colours, and fonts

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,9 @@ html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     text-size-adjust: 100%;
+    
+    background-color: #07171E;
+    color: #fff;      
 }
 
 *, *::before, *::after {
